# OCLDAQ

./: .gitmodules  CMakeLists.txt  README.md
HistDumper/: CMakeLists.txt  InterfaceDumper.cpp  InterfaceDumper.h  LinkDef.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  timercpp.cpp  timercpp.h  timercpp.hpp
XIAengine/: CMakeLists.txt  FileScalerWriter.cpp  FileScalerWriter.h  ScalerWriter.cpp  ScalerWriter.h  XIAControl.cpp  engine.cpp
XIAengine/software/app/: CMakeLists.txt  pixie16app.c
XIAengine/software/inc/: PciTypes.h
XIAengine/software/plx/: CMakeLists.txt
XIAengine/software/sys/: CMakeLists.txt
XIAonline/: CMakeLists.txt
include/mergesorter/: XIAModuleQueue.h
include/xia/: pixie16app_export.h  pixie16sys_export.h
master/: CMakeLists.txt
rupdate/: CMakeLists.txt
sirius/: CMakeLists.txt  run_command.cpp  utilities.cpp
software/: CMakeLists.txt  dummy.cpp
software/app/: CMakeLists.txt  pixie16app_defs.h  pixie16app_globals.h
software/plx/: CMakeLists.txt
software/sys/: CMakeLists.txt  tools.c
src/HistDumper/: CMakeLists.txt  InterfaceDumper.cpp  InterfaceDumper.h  LinkDef.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/XIARestEngine/: FirmwareMapper.cpp  FirmwareMapper.h  ListModeReadout.cpp  ListModeReadout.h  README.md  ScalerReadout.cpp  ScalerReadout.h  ScalerTransmitter.cpp  ScalerTransmitter.h  XIA_structures.h  XIAinterface.cpp  XIAinterface.h  main.cpp  utils.cpp
src/XIAengine/: FileScalerWriter.cpp  ScalerTransmitter.cpp  ScalerTransmitter.h  ScalerWriter.cpp  ScalerWriter.h  XIAControl.cpp  XIAControl.h  XIAReadoutQueue.cpp  XIAReadoutQueue.h  engine.cpp  functions.cpp  fwmap.cpp  fwmap.h  mainwindow.cpp  utils.cpp  utils.h
src/XIAengineV2/: XIAinterface.cpp  XIAinterface.h
src/XIAonline/: Calib.cpp  Calib.h  Sort_Funct.cpp  Sort_Funct.h  experimentsetup.c  main.cpp  spectrum_rw.cpp  spectrum_rw.h
src/master/: acq_gui.cpp  acq_init.cpp  acq_stop.cpp  acq_storage.cpp  io_xtapp.cpp  io_xtapp.h  m_engine.cpp  m_sort.cpp  net_client.cpp
src/rupdate/: io_root.cpp  io_root.h  linkdef.h  rupdate.cpp  rupdate.h
src/sirius/: net_control.cpp
src/xia/: communication.c  i2cm24c64.c  pixie16app.c  pixie16sys.c
template/: XIA_Firmware.ini  calib.txt
test/XIARestEngine/: firmware.txt  test.cpp
tests/: CMakeLists.txt  XIAengine.cpp  mergesorter.cpp
